{{$NEXT}}

1.6.0  2022-03-22 06:31:08 CET
   - release after 147 PASSes on CPAN Testers (thanks!)

1.5.0  2022-03-20 16:22:29 CET
   - fix usage of __PACKAGE__ as a key inside a hash, useful for older
     perl-s.

1.4.1  2022-03-19 19:06:08 CET
   - credits here in Changes to jwittkoski for asking about caller_depth
   - expand sub{} message parts also for warn/die/Carp functions (fixes
     https://github.com/polettix/Log-Log4perl-Tiny/issues/12)

1.4.0  2016-05-30 19:14:57 CEST
   - doc fix (bad links)
   - release after checks on CPAN Testers (thanks!)

1.3.2  2016-05-29 19:15:01 CEST
   - test implemented in bash turned into Perl
     (https://github.com/polettix/Log-Log4perl-Tiny/issues/6)

1.3.1  2016-05-29 15:40:51 CEST
   - added caller_depth (thanks to jwittkoski for asking it in 2012, see
     https://github.com/polettix/Log-Log4perl-Tiny/issues/2)
   - fixed how caller() is used in different sprintf-like expanders
   - added author test for verifying alignment with Log::Log4perl
   - aligned expansion of %T to Log::Log4perl implementation using
     Carp::longmess()
   - worked around issue on timezone expansion in Windows
   - moved to Milla as evolution from "plain" Dist::Zilla
   - added badgest to documentation after Perl Monks hint by jandrew
     (http://www.perlmonks.org/?node_id=1163390)

1.3.0     2016-05-28 00:10:42+02:00 Europe/Rome (TRIAL RELEASE)
   - extended way for defining sprintf-like sequences in format()
   - added %D/%{type}D sprintf option for timestamps with microseconds
   - all sprintf in an expansion share the same time
   - added extension sprintf %{key}e, loglocal and LOGLOCAL

1.2.10    2016-04-11 11:25:53+02:00 Europe/Rome
   - fixed spelling back to SYNOPSIS in documentation, argh!
   - documented :no_extra_logdie_message import option

1.2.9     2016-04-01 09:41:28+02:00 Europe/Rome
   - improved Kwalitee
   - fixed spelling of SYNOPSYS in documentation
   - release, 80 PASSes on CPAN Testers (thanks!)
