@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - emitting logs at the right level for Carp-ish stuff, fixes
+     https://github.com/polettix/Log-Log4perl-Tiny/issues/13
 
 1.6.0  2022-03-22 06:31:08 CET
    - release after 147 PASSes on CPAN Testers (thanks!)
